Fix web font on mobile

--- a/css/base/_bits.scss
+++ b/css/base/_bits.scss
@@ -8,7 +8,7 @@ $secondary-color: #54be8e; // Bright Green
 /**************************************************
 VARIABLES: Fonts
 **************************************************/
-$font-stack-display: 'League Gothic', sans-serif;
+$font-stack-display: 'league_gothicregular', sans-serif;
 $font-stack-main: 'Crimson Text', Georgia, serif;
 
 
