--- a/css/base/_fonts.scss
+++ b/css/base/_fonts.scss
@@ -2,12 +2,13 @@
 Web Fonts
 ****************************************** */
 @font-face {
-    font-family: 'League Gothic';
-    src: url('../../leaguegothic-regular-webfont.eot');
-    src: url('../../leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../leaguegothic-regular-webfont.woff') format('woff'),
-         url('../../leaguegothic-regular-webfont.ttf') format('truetype'),
-         url('../../leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
+    font-family: 'league_gothicregular';
+    src: url('../../fonts/LeagueGothic-Regular-webfont.eot');
+    src: url('../../fonts/LeagueGothic-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/LeagueGothic-Regular-webfont.woff2') format('woff2'),
+         url('../../fonts/LeagueGothic-Regular-webfont.woff') format('woff'),
+         url('../../fonts/LeagueGothic-Regular-webfont.ttf') format('truetype'),
+         url('../../fonts/LeagueGothic-Regular-webfont.svg#league_gothicregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
